# openface_tracker

./: CMakeLists.txt  README.md  package.xml
OpenFace/: CMakeLists.txt
OpenFace/exe/FeatureExtraction/: CMakeLists.txt  FeatureExtraction.cpp  FeatureExtraction.vcxproj
OpenFace/lib/local/FaceAnalyser/: CMakeLists.txt
exe/FeatureExtraction/: CMakeLists.txt  FeatureExtractionBACKUPWORK.cpp
launch/: features_face.launch  openface_tracker.launch
lib/local/FaceAnalyser/: CMakeLists.txt  FaceAnalyser.vcxproj
lib/local/FaceAnalyser/src/: FaceAnalyser.cpp
lib/local/LandmarkDetector/: CMakeLists.txt  LandmarkDetector.vcxproj
lib/local/LandmarkDetector/src/: LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp
nodes/: FeatureExtraction.cpp  estimate_attention.cpp  estimate_focus.cpp  executable_launcher.py  gaze_direction.py  withmeness.py
