<?xml version="1.0"?>
<package>
  <name>openface_tracker</name>
  <version>0.1.0</version>
  <description>New version of attention_tracker (https://github.com/chili-epfl/attention-tracker) using OpenFace Project https://github.com/TadasBaltrusaitis/OpenFace</description>

  <maintainer email="thibault.asselborn@gmail.com">Thibault Asselborn</maintainer>
  <maintainer email="alexis.jacq@epfl.ch">Alexis Jacq</maintainer>
  <author>Séverin Lemaignan</author>
  <author>Thibault Asselborn</author>
  <author>Alexis Jacq</author>

  <license>BDS</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>

  <run_depend>tf</run_depend>

</package>
